dnl Process this file with autoconf to produce a configure script.

AC_INIT(ltmain.sh)
AM_INIT_AUTOMAKE(linux-llc, 0.1.15)
AM_CONFIG_HEADER(include/config.h)

CFLAGS="-Wall"

dnl Checks for programs.
AC_PROG_CC
AM_PROG_LD
AC_SUBST(LD)
AC_PROG_LIBTOOL
AM_PROG_LIBTOOL

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(string.h unistd.h fcntl.h ctype.h errno.h signal.h syslog.h \
	sys/socket.h sys/param.h asm/types.h netinet/in.h arpa/inet.h \
	sys/utsname.h sys/ioctl.h linux/if_ether.h linux/if_arp.h linux/llc.h)

dnl Checks for *must* have headers.
AC_CHECK_FILE(/usr/include/linux/llc.h, LLC_H_EXIST=yes, LLC_H_EXIST=no)
if test LLC_H_EXIST = no ; then
  AC_MSG_ERROR(** Can't find llc kernel headers. Is llc kernel patch applied? **)
fi

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_TIME

dnl Checks for library functions.
AC_CHECK_LIB(proc, main)

dnl Check for XML libraries.
AC_PATH_PROG(XML_CONFIG, xml-config, no)
if test x$XML_CONFIG = xno ; then
        AC_MSG_WARN(** Can't find xml-config.  Is libxml or libxml-devel rpm installed? **)
	AC_MSG_ERROR(** libxml-devel is available via ftp from your linux distro or ftp.ximian.com **)
fi
AC_MSG_CHECKING(for xml C flags)
XML_CFLAGS="`$XML_CONFIG --cflags`"
CFLAGS="$CFLAGS $XML_CFLAGS"
AC_MSG_RESULT($XML_CFLAGS)
AC_MSG_CHECKING(for xml libs)
XML_LIBS="`$XML_CONFIG --libs`"
LIBS="$LIBS $XML_LIBS"
AC_MSG_RESULT($XML_LIBS)

dnl Check functions
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(getuid gettimeofday socket bind connect close exit write fflush \
	printf snprintf sscanf putchar isprint isdigit isxdigit strerror \
	strtoul send recv sendto recvfrom signal alarm getopt free atoi \
	strtol select perror)

dnl Actual files and directories autoconf touches
AC_CONFIG_SUBDIRS(llcdb llcping lar dlsw)
AC_OUTPUT(Makefile include/Makefile docs/Makefile)
