dnl Process this file with autoconf to create configure.

AC_INIT(dlswd.c)
AM_INIT_AUTOMAKE(dlsw, 0.1.15)

AC_PROG_CC
AC_EXEEXT
AM_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)

dnl Check for XML libraries.
AC_PATH_PROG(XML_CONFIG, xml-config, no)
if test x$XML_CONFIG = xno ; then
	AC_MSG_WARN(** Can't find xml-config.  Is libxml or libxml-devel rpm installed? **)
        AC_MSG_ERROR(** libxml-devel is available via ftp from your linux distro or ftp.ximian.com **)
fi
AC_MSG_CHECKING(for xml C flags)
XML_CFLAGS="`$XML_CONFIG --cflags`"
CFLAGS="$CFLAGS $XML_CFLAGS"
AC_MSG_RESULT($XML_CFLAGS)
AC_MSG_CHECKING(for xml libs)
XML_LIBS="`$XML_CONFIG --libs`"
LIBS="$LIBS $XML_LIBS"
AC_MSG_RESULT($XML_LIBS)

dnl Check for PROC libraries.
AC_CHECK_LIB(proc, main, PROC_EXIST=yes, PROC_EXIST=no)
#if test p$PROC_EXIST = pno ; then
#  AC_MSG_WARN(** Can't find libproc. Is libproc symlink there? **)
#  AC_CHECK_FILES(/lib/libproc*, PROC_EXIST=yes, PROC_EXIST=no)
#  if test p$PROC_EXIST = pno ; then
#    AC_MSG_ERROR(** Can't find libproc. Is libproc Installed? **)
#  fi
#  PROC_LIB=`ls /lib/libproc.*`
#  AC_MSG_ERROR(** create symlink ln -s $PROC_LIB /lib/libproc.so **)
#fi

dnl Output the makefile
AC_OUTPUT(Makefile)
