dnl Process this file with autoconf to create configure.

AC_INIT(dlswmon.c)
AM_INIT_AUTOMAKE(dlswmon, 0.1.14)

AC_PROG_CC
AC_EXEEXT
AM_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)

#dnl Check for PROC libraries.
#AC_CHECK_LIB(proc, main, PROC_EXIST=yes, PROC_EXIST=no)
#if test p$PROC_EXIST = pno ; then
#  AC_MSG_WARN(** Can't find libproc. Is libproc symlink there? **)
#  AC_CHECK_FILES(/lib/libproc*, PROC_EXIST=yes, PROC_EXIST=no)
#  if test p$PROC_EXIST = pno ; then
#    AC_MSG_ERROR(** Can't find libproc. Is libproc Installed? **)
#  fi
#  PROC_LIB=`ls /lib/libproc.*`
#  AC_MSG_ERROR(** create symlink ln -s $PROC_LIB /lib/libproc.so **)
#fi

dnl Output the makefile
AC_OUTPUT(Makefile)
