EXTRA_DIST = $(man_MANS) dlswd.xml llcpingd.xml llchosts.xml larhosts.xml lard.xml \
	llcping.txt llc.txt services.dlsw llc-sap-note.txt \
	rfc1434.html rfc1434.pdf rfc1795.html rfc1795.pdf \
	rfc2166.html rfc2166.pdf modules.conf.llc linux-llc.spec \
	find_sk_by_addr.txt test-plan.txt lard.init llcpingd.init dlswd.init

man_MANS = llc.7
