dnl Process this file with autoconf to create configure.

AC_INIT(llctftp.c)
AM_INIT_AUTOMAKE(llctftp, 0.1.17)

AC_PROG_CC
AC_EXEEXT

AC_PROG_LIBTOOL
AM_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)

dnl Check for XML libraries.
AC_PATH_PROG(XML_CONFIG, xml-config, no)
if test x$XML_CONFIG = xno ; then
	AC_MSG_WARN(** Can't find xml-config.  Is libxml or libxml-devel rpm installed? **)
        AC_MSG_ERROR(** libxml-devel is available via ftp from your linux distro or ftp.ximian.com **)
fi
AC_MSG_CHECKING(for xml C flags)
XML_CFLAGS="`$XML_CONFIG --cflags`"
CFLAGS="$CFLAGS $XML_CFLAGS"
AC_MSG_RESULT($XML_CFLAGS)
AC_MSG_CHECKING(for xml libs)
XML_LIBS="`$XML_CONFIG --libs`"
LIBS="$LIBS $XML_LIBS"
AC_MSG_RESULT($XML_LIBS)

dnl Output the makefile
AC_OUTPUT(Makefile)
